# shuttle-examples

./: .gitignore  .gitpod.yml  README.md  ci.sh  templates.toml
_scripts/: ci.sh  (+1 more)
actix-web/detailed-api-examples/: .gitignore  Cargo.toml  README.md  database.db
actix-web/detailed-api-examples/src/: app.rs  main.rs  token.rs
actix-web/postgres/: Cargo.toml  README.md
actix-web/postgres/migrations/: 0001_init.sql
actix-web/postgres/src/: lib.rs  main.rs
actix-web/websocket/: Cargo.toml  Shuttle.toml
actix-web/websocket-actorless/: Cargo.toml  README.md  Shuttle.toml
actix-web/websocket-actorless/src/: lib.rs  main.rs
actix-web/websocket-actorless/static/: index.html
actix-web/websocket/src/: lib.rs
actix-web/websocket/static/: index.html
axum/askama-templates/: Cargo.toml  README.md
axum/askama-templates/static/: script.js  style.css
axum/askama-templates/templates/: home.html
axum/code-snippet-sharing-app/: Cargo.toml  README.md
axum/code-snippet-sharing-app/.sqlx/: query-40f717379ce15156cabe7bd200bacf5ddf9c87a872574afeb20289627a897e7a.json  query-49969fd63526646bb069216573be8ad247d633fa8a073bdc0c6648089b5b0d4e.json  query-4d8ecc221df32f11c2b6143999f130ff18e38de22b685489bb6f8eb0abacf281.json  query-89b5d73a044dbac1f3463535b7d6eb431b51deb808b8b92c547acca53bb6fe55.json  query-9bed2880002e53cc7187b8b68256138694ecbe8df8f3618210232ad45d3d7a0c.json  query-a409ebc9ab67f4cbd9daa9e0209afd5c04ba143a352ab0dcea6cfe980721cd5f.json  query-b8207efb0a5e77f676e17f0c68e30e58455d4f915bc0a0c481ce77a1aff2828c.json
axum/code-snippet-sharing-app/migrations/: 20240101000000_create_snippets_table.sql
axum/code-snippet-sharing-app/src/: main.rs
axum/diesel-postgres/: .env  Cargo.toml  README.md
axum/diesel-postgres/migrations/2023-06-24-200350_create_todos/: down.sql  up.sql
axum/diesel-postgres/src/: main.rs  schema.rs
axum/dynamodb/: Cargo.toml  Shuttle.toml
axum/dynamodb/src/: main.rs
axum/firecrawl/: .gitignore  Cargo.toml  Secrets.example.toml  Shuttle.toml
axum/firecrawl/src/: main.rs
axum/htmx-crud/: Cargo.toml  README.md  Shuttle.toml
axum/htmx-crud/migrations/: 0000_init.sql  20231018144859_init.down.sql  20231018144859_init.up.sql
axum/htmx-crud/src/: errors.rs  main.rs  models.rs  router.rs  routes.rs  templates.rs
axum/htmx-crud/templates/: base.html  index.html  stream.html  styles.css  todo.html  todos.html
axum/jwt-authentication/: Cargo.toml  README.md
axum/jwt-authentication/src/: main.rs
axum/oauth2/: .gitignore  Cargo.toml  README.md
axum/oauth2-authentication/: Cargo.toml  README.md
axum/oauth2-authentication/migrations/: 20230815100114_schema.down.sql  20230815100114_schema.up.sql
axum/oauth2-authentication/src/: main.rs
axum/oauth2-authentication/src/routes/: errors.rs  mod.rs  oauth.rs
axum/oauth2/migrations/: 0001_init.sql
axum/oauth2/src/: main.rs  oauth.rs
axum/oauth2/src/routes/: errors.rs  oauth.rs
axum/openai/: Cargo.toml  README.md  Secrets.toml  Shuttle.toml  justfile
axum/openai/frontend/: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
axum/openai/frontend/app/: page.tsx
axum/openai/frontend/components/: ChatMessage.tsx  ConversationButton.tsx  Footer.tsx
axum/openai/hurl/: register.hurl
axum/openai/migrations/: 20241115220707_init.up.sql
axum/openai/src/: error.rs  main.rs  state.rs
axum/openai/src/endpoints/: auth.rs  mod.rs  openai.rs
axum/polars-otel-shuttle/: .gitignore  .ignore  Cargo.toml  README.md  Shuttle.toml
axum/polars-otel-shuttle/src/: etl.rs  main.rs  observability.rs
axum/postgres/: Cargo.toml  README.md
axum/postgres/migrations/: 1_schema.sql  schema.sql
axum/postgres/src/: main.rs
axum/qdrant/: .gitignore  Cargo.toml  README.md  Secrets.toml  Secrets.toml.example  Shuttle.toml
axum/qdrant/docs/: README.md  mint.json  package.json  shell.nix
axum/qdrant/docs/community/: contribute.mdx  get-involved.mdx  open-source.mdx
axum/qdrant/src/: contents.rs  errors.rs  finder.rs  main.rs  open_ai.rs  vector.rs
axum/qdrant/static/: index.html
axum/sqlite/: Cargo.toml  README.md  Shuttle.toml
axum/sqlite/src/: main.rs
axum/static-files/: Cargo.toml  README.md
axum/static-files/assets/: index.html  style.css
axum/static-files/src/: lib.rs  main.rs
axum/static-next-server/: .gitignore  .ignore  Cargo.toml  README.md  Shuttle.toml
axum/static-next-server/src/: lib.rs  main.rs
axum/todo-app/: Cargo.toml  README.md  Shuttle.toml
axum/todo-app/.sqlx/: query-183ad1d8316ef2ae5ac6ae4811b8a2bdbaeabbe137a871e26741a419a1aa5b19.json  query-25f558e700c67653fdb0a007ef1b4344bf1be2f4189b908907e68d238ed8e4f2.json  query-315a9ab6a895eb49f994f8264f87b0bc19b9bdb0044a51c5202635555b3fdacd.json  query-520950e2ddac5599f054db1ea66108e8cc464e7bcb7911a2a0691ff618d51dee.json  query-f0d6eaf1d0bba6c056d3efb8eeba9b8cecd5d286967c80638aee2a91d7dc51d0.json
axum/todo-app/migrations/: 20250812165323_create_todos_table.sql
axum/todo-app/src/: main.rs
axum/todo-app/static/: index.html  script.js  style.css
axum/todo-list/: Cargo.toml  README.md  Shuttle.toml
axum/todo-list/assets/: index.html  script.js  style.css
axum/todo-list/migrations/: 0001_init.sql
axum/todo-list/src/: main.rs
axum/turso/: Cargo.toml  README.md  Secrets.dev.toml  Secrets.toml  Shuttle.toml
axum/turso/src/: main.rs
axum/url-shortener/: Cargo.toml  README.md
axum/url-shortener/migrations/: 20250201_url-shortener.down.sql  20250201_url-shortener.up.sql
axum/url-shortener/src/: main.rs  routes.rs  startup.rs  telemetry.rs
axum/websocket/: Cargo.toml  README.md  Shuttle.toml
axum/websocket/src/: lib.rs  main.rs
axum/websocket/static/: index.html
betterstack-examples/axum-shared-db/: .gitignore  Cargo.toml
betterstack-examples/axum-shared-db/src/: main.rs
crontab/: Cargo.toml  README.md
crontab-api/: Cargo.toml  README.md  request.sh
crontab-api/src/: main.rs  router.rs
crontab/src/: main.rs  router.rs
shuttle-cron/: Cargo.toml  README.md
shuttle-cron/src/: main.rs
turso/: Cargo.toml  Secrets.dev.toml  Secrets.toml
turso/src/: main.rs
(+526 files in other folders)
