[package]
name = "shuttle-cron"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
apalis = { version = "0.6", features = ["retry"] }
apalis-sql = { version = "0.6", features = ["postgres"] }
apalis-cron = { version = "0.6" }
chrono = { version = "0.4.32", features = ["clock", "serde"] }
serde = { version = "1.0.195", features = ["derive"] }
shuttle-runtime = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["postgres"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1"
