[package]
name = "turso-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.10", features = ["macros"] }
shuttle-axum = { version = "0.19.0", path = "../../services/shuttle-axum" }
shuttle-runtime = { version = "0.19.0", path = "../../runtime" }
shuttle-turso = { version = "0.19.0", path = "../../resources/turso" }
libsql-client = "0.27"
tokio = { version = "1.26.0" }
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
serde_json = "1.0.99"
