[package]
name = "detailed-api-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-files = "*"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
tera = "1.16.0"
serde = {version = "*", features = ["derive"]}
actix-session = {version="0.6.2", features= ["cookie-session"]}
actix-redis = "0.11.0"
validator = { version = "0.15", features = ["derive"] }
bcrypt = "0.13.0"
actix-cors = "0.7.0"
rand = "0.8.5"
actix-multipart = "0.6.1"
futures-util = "0.3"  # next() için gerekli
sha2 = "0.10.8"
chrono = "0.4.39"
base64 = "0.22.1"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.26.0"
libsql = "0.6.0"
