[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.19.0"
shuttle-runtime = "0.19.0"
serde = "1.0.148"
shuttle-shared-db = { version = "0.19.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"
