[package]
name = "websocket-actorless"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-ws = "0.2.5"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-actix-web = { version = "0.12.0-rc1" }
shuttle-runtime = { version = "0.12.0-rc1" }
shuttle-static-folder = "0.12.0-rc1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tracing = "0.1"
