[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["web-actix-web"] }
shuttle-static-folder = "0.8.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix = "0.13.0"
actix-files = "0.6.2"
reqwest = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }
tracing = "0.1"
