[package]
name = "askama-templates"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.18"
shuttle-axum = "0.18.0"
shuttle-runtime = "0.18.0"
shuttle-static-folder = "0.18.0"
tokio = "1.28.2"
tower-http = { version = "0.4.0", features = ["fs"] }
