[package]
name = "blah"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
shuttle-axum = { git = "https://github.com/RobWalt/shuttle", branch = "feat/shared-db-diesel" }
shuttle-runtime = { git = "https://github.com/RobWalt/shuttle", branch = "feat/shared-db-diesel" }
shuttle-shared-db = { git = "https://github.com/RobWalt/shuttle", branch = "feat/shared-db-diesel", features = ["postgres"] }
serde = "1.0"
tokio = "1.28"
diesel = "2.1.0"
diesel_migrations = "2.1.0"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
tracing = "0.1.37"
