[package]
name = "dynamodb"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.2"
aws-sdk-dynamodb = "0.27.0"
axum = "0.6.18"
shuttle-axum = "0.20.0"
shuttle-dynamodb = "0.20.0"
shuttle-runtime = "0.20.0"
tokio = "1.28.1"
tracing = "0.1.37"
