[package]
name = "firecrawl-example"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = { version = "0.47.0", git = "https://github.com/joshua-mo-143/shuttle.git", branch = "firecrawl" }

axum = "0.7.4"
shuttle-firecrawl = { version = "0.47.0", git = "https://github.com/joshua-mo-143/shuttle.git", branch = "firecrawl" }
shuttle-axum = { version = "0.47.0", git = "https://github.com/joshua-mo-143/shuttle.git", branch = "firecrawl" }
tokio = "1.28.2"
serde_json = "1.0.128"
