[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
tokio = "1.28.2"
tokio-stream = { version = "0.1.14", features = ["sync"] }
