[package]
name = "shuttle-axum-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.29"
argon2 = "0.5.3"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie", "cookie-private"] }
derive_more = { version = "1.0.0", features = ["full"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1"
shuttle-axum = "0.57.0"
shuttle-openai = "0.57.0"
shuttle-runtime = "0.57.0"
shuttle-shared-db = { version = "0.57.0", features = ["postgres"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
