[package]
name = "polars-otel-shuttle"
version = "0.1.0"
edition = "2021"

[features]
bench-cli = []          # local CLI binary
otel-otlp = ["opentelemetry-otlp"]  # enable real OTLP exporter when you want it

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web (for Shuttle build)
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tracing-opentelemetry = "0.31"

# OpenTelemetry (core + SDK; OTLP exporter is optional via feature)
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry_sdk = { version = "0.30", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["http-proto", "tls"], optional = true }

# Runtime (new enough to satisfy shuttle-runtime)
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }

# ETL
polars = { version = "0.49", features = [
  "lazy", "csv", "parquet", "fmt", "strings", "dtype-date", "dtype-datetime"
] }
chrono = { version = "0.4", features = ["clock"] }
comfy-table = "7"

# Shuttle (only used on deploy)
shuttle-runtime = { version = "0.56", features = ["setup-otel-exporter"] }
shuttle-axum = "0.56"
