[package]
name = "todo-list"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = "0.8"
tokio = "1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
