[package]
name = "turso-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18" }
shuttle-axum = { version = "0.35.1" }
shuttle-runtime = { version = "0.35.1" }
shuttle-turso = { version = "0.35.1" }
libsql-client = "0.31.0"
tokio = { version = "1.26.0" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
